[gd_scene load_steps=23 format=2]

[ext_resource path="res://GamePlaying/PlayScreen.gd" type="Script" id=1]
[ext_resource path="res://GamePlaying/FoodContainer.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/Background.gd" type="Script" id=3]
[ext_resource path="res://GamePlaying/BoidContainer.gd" type="Script" id=4]
[ext_resource path="res://Ressources/Images/square32.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Fonts/Raleway-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://MainMenu/Options/Slider.gd" type="Script" id=7]
[ext_resource path="res://MainMenu/Buttons/goBackButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://GamePlaying/Overlay/PauseMenu.gd" type="Script" id=9]
[ext_resource path="res://MainMenu/Options/OptionsScene.gd" type="Script" id=10]
[ext_resource path="res://GamePlaying/Sliders.gd" type="Script" id=11]
[ext_resource path="res://MainMenu/Buttons/MenuButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://MainMenu/Buttons/ControlsButton.gd" type="Script" id=13]
[ext_resource path="res://GamePlaying/Rooms/MainRooms.tscn" type="PackedScene" id=14]
[ext_resource path="res://MainMenu/Buttons/MusicButton.gd" type="Script" id=15]
[ext_resource path="res://MainMenu/Buttons/SfxButton.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_char = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
extra_spacing_top = 5
extra_spacing_bottom = -6
extra_spacing_char = 2
font_data = ExtResource( 6 )

[node name="PlayScreen" type="Node"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -58.0
margin_right = 288.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 1 )
text = "LOADING..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainRooms" parent="." instance=ExtResource( 14 )]
light_mask = 16
position = Vector2( 824, 448 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="CanvasLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.423529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu/PauseOverlay"]
show_behind_parent = true
margin_left = 136.0
margin_top = 304.0
margin_right = 731.0
margin_bottom = 604.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/PauseMenu/PauseOverlay"]
show_behind_parent = true
margin_left = 896.0
margin_top = 232.0
margin_right = 1360.0
margin_bottom = 688.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsScene" type="Control" parent="CanvasLayer/PauseMenu/PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -164.0
margin_right = 360.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
text = "Exit To Main Menu"
reference_path = "res://MainMenu/MainMenuScreen.tscn"

[node name="Button2" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" instance=ExtResource( 12 )]
margin_left = 1456.0
margin_top = 24.0
margin_right = 1576.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Music"
script = ExtResource( 15 )

[node name="MusicStatus" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/Button2"]
margin_left = 40.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 62.0
text = "True"
align = 1

[node name="Button3" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" instance=ExtResource( 12 )]
margin_left = 1456.0
margin_top = 112.0
margin_right = 1576.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "SoundFX"
script = ExtResource( 17 )

[node name="SfxStatus" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/Button3"]
margin_left = 40.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 62.0
text = "True"
align = 1

[node name="SlidersAndMore" type="Control" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -622.546
margin_top = -180.0
margin_right = 627.454
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer"]
margin_right = 595.0
margin_bottom = 360.0
grow_horizontal = 0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSpeed" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 595.0
margin_bottom = 107.0
rect_min_size = Vector2( 303, 25 )
custom_constants/separation = 20
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Move Speed"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed"]
margin_left = 270.0
margin_right = 420.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="Value" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed"]
margin_left = 440.0
margin_right = 595.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed/Value"]
margin_left = 15.0
margin_top = -2.0
margin_right = 50.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireRate" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 595.0
margin_bottom = 192.0
rect_min_size = Vector2( 303, 25 )
custom_constants/separation = 20
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Fire Rate"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate"]
margin_left = 270.0
margin_right = 420.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="Value" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate"]
margin_left = 440.0
margin_right = 595.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate/Value"]
margin_left = 15.0
margin_top = -2.0
margin_right = 50.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletVel" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 595.0
margin_bottom = 277.0
rect_min_size = Vector2( 303, 25 )
custom_constants/separation = 20
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Bullet Velocity"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel"]
margin_left = 270.0
margin_right = 420.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="Value" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel"]
margin_left = 440.0
margin_right = 595.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel/Value"]
margin_left = 15.0
margin_top = -2.0
margin_right = 50.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer"]
margin_left = 655.0
margin_right = 1250.0
margin_bottom = 360.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1

[node name="RoomsCount" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2"]
margin_right = 595.0
margin_bottom = 24.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsCount"]
margin_left = 105.0
margin_right = 355.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Rooms Count (50%)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rooms Count" type="SpinBox" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsCount"]
margin_left = 415.0
margin_right = 489.0
margin_bottom = 24.0
hint_tooltip = "Only 50% of the total rooms count will be picked. (randomization)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomsMinSize" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 595.0
margin_bottom = 108.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMinSize"]
margin_left = 105.0
margin_right = 355.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Rooms Minimum Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rooms Min Size" type="SpinBox" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMinSize"]
margin_left = 415.0
margin_right = 489.0
margin_bottom = 24.0
min_value = 1.0
max_value = 90.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomsMaxSize" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 595.0
margin_bottom = 192.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMaxSize"]
margin_left = 105.0
margin_right = 355.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Rooms Maximum Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rooms Max Size" type="SpinBox" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMaxSize"]
margin_left = 415.0
margin_right = 489.0
margin_bottom = 24.0
min_value = 10.0
max_value = 100.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomsVSpread" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2"]
margin_top = 252.0
margin_right = 595.0
margin_bottom = 276.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsVSpread"]
margin_left = 103.0
margin_right = 358.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Rooms Vertical Spread"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rooms V Spread" type="SpinBox" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsVSpread"]
margin_left = 418.0
margin_right = 492.0
margin_bottom = 24.0
max_value = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomsHSpread" type="HBoxContainer" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2"]
margin_top = 336.0
margin_right = 595.0
margin_bottom = 360.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsHSpread"]
margin_left = 89.0
margin_right = 372.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
text = "Rooms Horizontal Spread"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rooms H Spread" type="SpinBox" parent="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsHSpread"]
margin_left = 432.0
margin_right = 506.0
margin_bottom = 24.0
max_value = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/PauseOverlay"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.5
margin_top = -34.0
margin_right = 172.5
custom_fonts/font = SubResource( 2 )
text = "Press Escape to resume game."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" parent="CanvasLayer/PauseMenu" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 552.0
margin_top = 286.0
margin_right = 672.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 2 )
text = "Controls"
script = ExtResource( 13 )

[node name="ControlsBackground" type="Sprite" parent="CanvasLayer/PauseMenu"]
visible = false
show_behind_parent = true
position = Vector2( 800, 448 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -0.008, 0, 1800, 1000 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="CanvasLayer/PauseMenu/ControlsBackground"]
wait_time = 1.5
autostart = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu/ControlsBackground"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -900.0
margin_top = -500.0
margin_right = -900.0
margin_bottom = -500.0
color = Color( 0, 0, 0, 0.266667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsView" type="HBoxContainer" parent="CanvasLayer/PauseMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -322.5
margin_right = 229.0
margin_bottom = 322.5
custom_constants/separation = 150
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView"]
margin_left = 47.0
margin_right = 411.0
margin_bottom = 645.0

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer"]
margin_right = 364.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Developper Only Section"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer"]
margin_top = 23.0
margin_right = 364.0
margin_bottom = 390.0

[node name="ControlsDev" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 367.0
rect_min_size = Vector2( 180, 0 )

[node name="Control" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer/ControlsDev"]
margin_right = 180.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONTROLS

Space
Tab
P
Scroll up
Scroll down


"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsDev" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 367.0
rect_min_size = Vector2( 180, 0 )

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer/ActionsDev"]
margin_right = 180.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ACTION

Respawn rooms
Generate map
Start playing
Zoom in
Zoom out"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer"]
margin_top = 394.0
margin_right = 364.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Section"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer"]
margin_top = 417.0
margin_right = 364.0
margin_bottom = 562.0

[node name="ControlsPlayer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer2"]
margin_right = 180.0
margin_bottom = 145.0
rect_min_size = Vector2( 180, 0 )

[node name="Control" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer2/ControlsPlayer"]
margin_right = 180.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONTROLS

Move cursor
Left click"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsPlayer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 145.0
rect_min_size = Vector2( 180, 0 )

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/ControlsView/VBoxContainer/HBoxContainer2/ActionsPlayer"]
margin_right = 180.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ACTION

Move player
Shoot"
align = 1

[node name="Background" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 800, 452 )
scale = Vector2( 50, 28.25 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 1000 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Background"]
wait_time = 1.5
autostart = true

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -523.36
margin_top = -534.23
margin_right = 525.64
margin_bottom = 539.77
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodContainer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BoidContainer" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Player" type="Node" parent="BoidContainer"]

[node name="BotContainer" type="Node" parent="BoidContainer"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed/HSlider" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/MoveSpeed" method="_on_MoveSpeed_move_speed_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate/HSlider" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/FireRate" method="_on_fire_rate_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel/HSlider" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer/BulletVel" method="_on_bullet_velocity_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsCount/Rooms Count" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" method="_on_Rooms_Count_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMinSize/Rooms Min Size" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" method="_on_Rooms_Min_Size_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsMaxSize/Rooms Max Size" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" method="_on_Rooms_Max_Size_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsVSpread/Rooms V Spread" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" method="_on_Rooms_V_Spread_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene/SlidersAndMore/HBoxContainer/VBoxContainer2/RoomsHSpread/Rooms H Spread" to="CanvasLayer/PauseMenu/PauseOverlay/OptionsScene" method="_on_Rooms_H_Spread_value_changed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ControlsButton" to="CanvasLayer/PauseMenu/ControlsButton" method="_on_ControlsButton_pressed"]
[connection signal="timeout" from="CanvasLayer/PauseMenu/ControlsBackground/Timer" to="CanvasLayer/PauseMenu/ControlsBackground" method="_on_Timer_timeout"]
[connection signal="timeout" from="Background/Timer" to="Background" method="_on_Timer_timeout"]
